Working CMake configuration for GLFW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,29 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.11)
 
-include_directories(include)
+set(CMAKE_CXX_STANDARD 11)
 
-project(stereo)
-add_library(stereo SHARED src/lib.cpp)
-add_executable(stereo-world src/main.cpp)
+# GLFW
+set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
 
 add_subdirectory(libs/glfw)
+
+
+# Stereo Library
+project(stereo)
+add_library(stereo SHARED src/lib.cpp)
+target_include_directories(stereo 
+    PUBLIC include 
+    PUBLIC libs/glfw/include
+)
+target_link_libraries(stereo glfw)
+
+# Stereo Executable
+project(stereo-world)
+add_executable(stereo-world src/main.cpp)
+target_include_directories(stereo-world 
+    PUBLIC include 
+)
+target_link_libraries(stereo-world stereo)
 
