Add OpenVR to dependencies

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/glfw"]
 	path = libs/glfw
 	url = https://github.com/mvk-pupils/glfw
+[submodule "libs/openvr"]
+	path = libs/openvr
+	url = git@github.com:mvk-pupils/openvr.git
