--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
       - libx11-dev
       - libxcursor-dev
       - libxi-dev
-      - libgl1-mesa-glx
+      - libgl1-mesa-dev
 
 before_script:
   - mkdir build
