Added GLAD and loaded OpenGL

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "libs/glew-2.1.0"]
 	path = libs/glew-2.1.0
 	url = https://github.com/mvk-pupils/glew-2.1.0.git
+[submodule "libs/glad"]
+	path = libs/glad
+	url = https://github.com/mvk-pupils/glad
