Add CMake configuration for ICONIC's proprietary library

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -33,6 +33,25 @@ find_library(OPENVR_LIBRARY
 set(OPENVR_INCLUDE_DIR ${PROJECT_ROOT}/libs/openvr/headers)
 
 
+# Iconic API (proprietary)
+find_library(OPENVR_LIBRARY
+    NAMES
+        openvr_api OpenVR
+    PATHS
+        ${PROJECT_ROOT}/libs/openvr/bin
+        ${PROJECT_ROOT}/libs/openvr/lib
+    PATH_SUFFIXES
+        osx64
+        linux64
+        ${WINDOWS_PATH_SUFFIXES}
+    NO_DEFAULT_PATH
+    NO_CMAKE_FIND_ROOT_PATH
+)
+set(ICONIC_INCLUDE_DIR "$ENV{ICONICPATH}/IconicGpu/include")
+
+find_package(Boost REQUIRED)
+find_package(Eigen3 REQUIRED)
+
 # Stereo Executable
 set(STEREO_BIN_SOURCES
     src/main.cpp
@@ -40,19 +59,26 @@ set(STEREO_BIN_SOURCES
     src/window.cpp
 )
 
+message(STATUS "Eigen ${EIGEN3_INCLUDE_DIR}")
+
 set(STEREO_BIN_INCLUDES
     PUBLIC include
     PUBLIC ${STEREO_INCLUDE_DIR}
     PUBLIC ${GLFW_INCLUDE_DIR}
     PUBLIC ${OPENVR_INCLUDE_DIR}
+    PUBLIC ${ICONIC_INCLUDE_DIR}
+    PUBLIC ${Boost_INCLUDE_DIRS}
+    PUBLIC ${EIGEN3_INCLUDE_DIR}
 )
 
 set(STEREO_BIN_LIBRARIES
     stereo-static
     glfw
     ${OPENVR_LIBRARY}
+    ${Boost_LIBRARIES}
 )
 
 add_executable(stereo-world ${STEREO_BIN_SOURCES})
 target_include_directories(stereo-world ${STEREO_BIN_INCLUDES})
 target_link_libraries(stereo-world ${STEREO_BIN_LIBRARIES})
+target_link_libraries(stereo-world "$ENV{ICONICPATH}/IconicGpu/lib/x64/Release/IconicVideo.lib")
