Embedded shaders implemented

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,16 @@ file(
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/img
 )
 
+# Shader Source
+add_executable(shader_embedder src/tools/shaderembedder.cpp)
+add_custom_command(
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/include/shadersource.hpp
+    COMMAND shader_embedder ${CMAKE_CURRENT_BINARY_DIR}/include/shadersource.hpp
+        ${CMAKE_CURRENT_BINARY_DIR}/shaders/fragment_shader.frag frag
+        ${CMAKE_CURRENT_BINARY_DIR}/shaders/vertex_shader.vert vert
+    DEPENDS shader_embedder
+)
+
 # Stereo Library
 set(STEREO_SOURCES
     src/stb_image.cpp
@@ -78,7 +88,10 @@ set(STEREO_SOURCES
     src/framebuffer.cpp
 )
 
-set(STEREO_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(STEREO_INCLUDE_DIR
+    ${CMAKE_CURRENT_SOURCE_DIR}/include
+    ${CMAKE_CURRENT_BINARY_DIR}/include/shadersource.hpp
+    )
 set(STEREO_INCLUDES
     PUBLIC ${STEREO_INCLUDE_DIR}
     PUBLIC ${GLAD_INCLUDE_DIRS}
