--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -6,14 +6,6 @@ project(stereo-world)
 
 find_package(GLFW3)
 
-# GLFW
-# set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
-# set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-# set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
-# add_subdirectory(${PROJECT_ROOT}/libs/glfw glfw)
-# set(GLFW_INCLUDE_DIR ${PROJECT_ROOT}/libs/glfw/include)
-
-
 # Iconic API (proprietary)
 set(ICONIC_INCLUDE_DIR "$ENV{ICONICPATH}/IconicGpu/include")
 set(ICONIC_LIBRARIES
@@ -23,17 +15,10 @@ set(ICONIC_LIBRARIES
 )
 set(ICONIC_INCLUDE_DIR "$ENV{ICONICPATH}/IconicGpu/include")
 
-file(GLOB ICONIC_DLL_LIST "$ENV{ICONICPATH}/IconicGpu/x64/Release/*.dll")
-message("DLLS: ${ICONIC_DLL_LIST}")
-foreach(ICONIC_DLL ${ICONIC_DLL_LIST})
-    message("DLL: ${ICONIC_DLL}")
-    file(
-        COPY "${ICONIC_DLL}"
-        DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
-    )
-endforeach(ICONIC_DLL)
-
+# Boost
 find_package(Boost REQUIRED)
+
+# Eigen
 find_package(Eigen3 REQUIRED)
 
 # Stereo Executable
@@ -62,8 +47,23 @@ set(STEREO_BIN_LIBRARIES
 )
 
 add_executable(stereo-world EXCLUDE_FROM_ALL ${STEREO_BIN_SOURCES})
+
 target_include_directories(stereo-world ${STEREO_BIN_INCLUDES})
 target_link_libraries(stereo-world ${STEREO_BIN_LIBRARIES})
 
 # Set the prefix to use when printing logging information
 target_compile_definitions(stereo-world PRIVATE LOG_SOURCE_MODULE="stereo-world")
+
+
+# Copy DLL:s to output directory
+file(GLOB ICONIC_DLL_LIST "$ENV{ICONICPATH}/IconicGpu/x64/Release/*.dll")
+message("DLLS: ${ICONIC_DLL_LIST}")
+foreach(ICONIC_DLL ${ICONIC_DLL_LIST})
+    message("DLL: ${ICONIC_DLL}")
+    add_custom_command ( TARGET stereo-world POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${ICONIC_DLL}"
+        $<TARGET_FILE_DIR:stereo-world>
+    )
+endforeach(ICONIC_DLL)
+
